--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue-template",
+  "name": "codeg-ui",
   "version": "0.1.0",
   "description": "A minimal Electron + Vue application",
   "main": "build/main/main.js",
@@ -21,7 +21,7 @@
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "electron": "^17.1.0",
-    "electron-builder": "^22.14.13",
+    "electron-builder": "^23.0.2",
     "typescript": "^4.6.2",
     "vite": "^2.8.6"
   },
