--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "chokidar": "^3.5.3",
     "electron": "^17.1.0",
     "electron-builder": "^23.0.2",
+    "less": "^4.1.2",
     "typescript": "^4.6.2",
     "vite": "^2.8.6"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.1.0-rc.5",
     "axios": "^0.26.1",
     "pinia": "^2.0.13",
     "vue": "^3.2.31"
